@@ -14,6 +14,8 @@ IN DEVELOPMENT
     progress made. 'make check' shows tests in -v mode, to be more useful
     for the PQM status window. (Robert Collins).
 
+    * ``log --line`` shows the revision number.  (#5162, Alexander Belchenko)
+
   BUG FIXES:
 
     * Fix shadowed definition of TestLocationConfig that caused some 
